fix overflow

--- a/fitness-app/src/App.css
+++ b/fitness-app/src/App.css
@@ -362,6 +362,7 @@
         background-color:white;
         border-radius: 15px;
         margin:0% 2% 5% 3%;
+        width:90%;
     }
     .quotes{
         background-color: white;
